crates/bc-cli/tests/cli/snapshots/cli__help__top_level_help@help.snap
---
source: crates/bc-cli/tests/cli/help.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
BorrowChecker command-line interface

Usage: borrow-checker [OPTIONS] <COMMAND>

Commands:
  account            Manage accounts
  asset              Manage assets
  backup             Snapshot the database to a backup file
  transaction        Manage transactions
  import             Manage imports
  sync               Run one import profile or every profile through the shared engine
  export             Export all accounts and transactions to a file or stdout
  report             Generate financial reports
  restore            Restore the database from a backup file
  budget             Manage budgets
  tag                Manage tags
  meta               Manage the metadata key registry
  commodity          Manage commodities
  plugin             Manage plugins (requires Milestone 6)
  profile            Manage import profiles
  completions        Generate shell completion scripts
  merge              Merge two transactions (e.g. the two legs of a transfer) into one
  unmerge            Reverse a previous merge, splitting a transaction back into two
  suggest-transfers  Suggest candidate transfer pairs to merge
  help               Print this message or the help of the given subcommand(s)

Options:
      --json
          Emit machine-readable JSON instead of human-readable output

          [env: BC_JSON=]

      --db-path <DB_PATH>
          Path to the SQLite database file.

          Overrides `db.path` from the config file, the `BC_DB__PATH` environment variable and the platform default.

  -v, --verbose...
          Increase log verbosity.

          Pass once for info (`-v`), twice for debug (`-vv`), three times for trace (`-vvv`). Use `RUST_LOG` for fine-grained per-crate control.

  -q, --quiet...
          Decrease log verbosity.

          Pass once for error-only output (`-q`). Use `RUST_LOG` for fine-grained per-crate control.

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
----- stderr -----
